...

    when (name) {
        "COORDINATOR" -> {
            var vanAttendance by remember { mutableStateOf(mutableListOf<VanWithAttendance>()) }
            Scaffold(
                topBar = {
                    TopBar(title = "Coordinator Dashboard", onLogoutClick = { onLogoutClick.invoke() })
                }
            ) { padding ->
                // Your existing content goes here
                Box(modifier = Modifier.padding(padding)) {
                    Column {
                        attendanceViewModel.fetchVansAndAttendance { vans ->
...

        }

        "STUDENT" -> {
            Scaffold(
                topBar = {
                    TopBar(title = "Student Dashboard", onLogoutClick = { onLogoutClick.invoke() })
                }
            ) { padding ->
                // Your existing content goes here
                Box(modifier = Modifier.padding(padding)) {
                    Column {
                        var isAttendanceMarked by remember { mutableStateOf(false) }
...
