appId: com.lotusinc.transportmanagmentsystem
---
- launchApp
- tapOn: Email
- inputText: "ateeb@gmail.com"
- tapOn: Password
- inputText: "lotus123"
- hideKeyboard
- tapOn: Login
- assertVisible: "Student Dashboard"
- tapOn: abc-123
- tapOn: Mark Attendance
- assertVisible: "Attendance Marked"
- tapOn:
    id: logout